--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 .button-class {
-  background-color: #4caf50; /* Green */
+  background-color: #556B2F; /* olive Green */
     border: none;
     color: white;
     padding: 16px 32px;
@@ -13,6 +13,6 @@
     cursor: pointer;
     background-color: white;
     color: black;
-    border: 2px solid #4caf50;
+    border: 2px solid #556B2F;
 
 }
