--- a/styles.css
+++ b/styles.css
@@ -26,3 +26,34 @@
   display: block;
 }
 */
+
+.modal-container {
+  position: fixed;
+  padding: 10px;
+  box-sizing: border-box;
+  top: 0;
+  left: 0;
+  width: 100%,
+  height: 100%,
+  background: rgba (0, 0, 0, 0.5);
+  z-index: 999;
+  display: none;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal {
+  font-family: 'fredoka', sans-serif;
+  margin: auto;
+  display: flex;
+  box-sizing: border-box;
+  background: #fff;
+  box-shadow: 0 0 10px;
+  border-radius: 10px;
+  padding: 15px;
+  width: 75vw;
+  text-align: center;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
