--- a/styles.css
+++ b/styles.css
@@ -16,16 +16,21 @@
     border: 2px solid #556B2F;
 
 }
-/*css /*adding the modal container task 1.8
-#modal-container {
-  display: none;
+/*css /*adding the modal container task 1.8 */
+header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #000;
+    padding: 0.5rem 0;
+    background: lightpink;
 }
 
-#modal-container.is-visible { /*modal shown on when 'isvisible'added
-
-  display: block;
+#pokemon__logo {
+    padding: 2rem 0;
+    max-width: 50vw;
+    height: auto;
 }
-*/
 
 .modal-container {
   position: fixed;
@@ -56,4 +61,56 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.is-visible {
+  display: grid;
+}
+
+.modal__img {
+  width: 20vw;
+  height: auto;
+}
+
+.modal-close {
+  float: right;
+  -webkit-appearance: none;
+  border: 0;
+  background: none;
+  color: #777;
+  text-decoration: circle;
+}
+
+.modal h1 {
+  margin-top: 0;
+}
+
+.modal p {
+  margin-bottom: 0;
+}
+
+#modal-container {
+  position: fixed;
+  padding: 20px;
+  box-sizing: border-box;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+
+  /* to show it above other content */
+  z-index: 999;
+
+  /* to allow scrolling if the screen is not high enough*/
+  overflow: auto;
+
+  /* this is used to center the modal */
+  display: grid;
+  text-align: center;
+}
+
+#modal-container.is-visible {
+  /* CSS for modal container - add your own desired CSS styles here */
+  display: block;
 }
