--- a/styles.css
+++ b/styles.css
@@ -38,8 +38,8 @@ header {
   box-sizing: border-box;
   top: 0;
   left: 0;
-  width: 100%,
-  height: 100%,
+  width: 100%;
+  height: 100%;
   background: rgba (0, 0, 0, 0.5);
   z-index: 999;
   display: none;
@@ -56,7 +56,7 @@ header {
   box-shadow: 0 0 10px;
   border-radius: 10px;
   padding: 15px;
-  width: 75vw;
+  width: 15vw;
   text-align: center;
   flex-direction: column;
   justify-content: center;
@@ -68,7 +68,7 @@ header {
 }
 
 .modal__img {
-  width: 20vw;
+  width: 10vw;
   height: auto;
 }
 
