--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,20 @@ header {
     max-width: 50vw;
     height: auto;
 }
-
+ 
+.pokemon-list {
+  list-style: none;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  text-align: center;
+  grid-row-gap: 20px;
+  grid-column-gap: 100px;
+  margin: 30px 70px 70px 70px;
+}
+.list-group{
+  margin-right: 100px;
+  margin-left: 100px;
+}
 .modal-container {
   position: fixed;
   padding: 10px;
