--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@ body {
   margin-left: auto;
   margin-right: auto;
 }
-.button-class {
+button.btn-outline-dark {
   background-color: #556B2F; /* olive Green */
     border: none;
     color: white;
@@ -25,6 +25,8 @@ body {
     background-color: white;
     color: black;
     border: 2px solid #556B2F;
+    text-transform: capitalize;
+    min-width:200px;
 
 }
 /*css /*adding the modal container task 1.8 */
@@ -36,13 +38,13 @@ header {
     padding: 0.5rem 0;
     background: rgb(14, 13, 13);
 }
-.pikachu_icon {
+/* .pikachu_icon {
   margin-left: auto;
   margin-right: auto;
 padding: 15px;
-}
+} */
 
-.pokemon_logo {
+/* #pokemon_logo {
   display: block;
     padding: 100;
     width: 500px;
@@ -50,7 +52,7 @@ padding: 15px;
     margin-right: auto;
     margin-left: auto;
 float: left; 
- }
+ } */
  
   h1 {
     color: black;
@@ -80,86 +82,4 @@ float: left;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
   }
-}
-.modal-container {
-  position: fixed;
-  padding: 10px;
-  box-sizing: border-box;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba (0, 0, 0, 0.5);
-  z-index: 999;
-  display: none;
-  justify-content: center;
-  align-items: center;
-}
-
-.modal {
-  font-family: 'fredoka', sans-serif;
-  margin: auto;
-  display: flex;
-  box-sizing: border-box;
-  background: #fff;
-  box-shadow: 0 0 10px;
-  border-radius: 10px;
-  padding: 15px;
-  width: 75vw;
-  text-align: center;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.is-visible {
-  display: grid;
-}
-
-.modal__img {
-  width: 10vw;
-  height: auto;
-}
-
-.modal-close {
-  float: right;
-  -webkit-appearance: none;
-  border: 0;
-  background: none;
-  color: #777;
-  text-decoration: circle;
-}
-
-.modal h1 {
-  margin-top: 0;
-}
-
-.modal p {
-  margin-bottom: 0;
-}
-
-#modal-container {
-  position: fixed;
-  padding: 20px;
-  box-sizing: border-box;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.5);
-
-  /* to show it above other content */
-  z-index: 999;
-
-  /* to allow scrolling if the screen is not high enough*/
-  overflow: auto;
-
-  /* this is used to center the modal */
-  display: grid;
-  text-align: center;
-}
-
-#modal-container.is-visible {
-  /* CSS for modal container - add your own desired CSS styles here */
-  display: block;
 }
