--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,6 @@ button.btn-outline-dark {
     min-width:200px;
 
 }
-/*css /*adding the modal container task 1.8 */
 header {
     display: flex;
     justify-content: center;
@@ -38,13 +37,13 @@ header {
     padding: 0.5rem 0;
     background: rgb(14, 13, 13);
 }
-/* .pikachu_icon {
+ .pikachu_icon {
   margin-left: auto;
   margin-right: auto;
 padding: 15px;
-} */
+} 
 
-/* #pokemon_logo {
+ #pokemon_logo {
   display: block;
     padding: 100;
     width: 500px;
@@ -52,7 +51,7 @@ padding: 15px;
     margin-right: auto;
     margin-left: auto;
 float: left; 
- } */
+ } 
  
   h1 {
     color: black;
@@ -66,14 +65,15 @@ float: left;
 .pokemon-list {
   padding: auto;
   list-style: none;
-  display: grid;
+  display: flex;
   grid-template-columns: 1fr 1fr 1fr;
   text-align: center;
   grid-row-gap: 20px;
   grid-column-gap: 100px;
   margin: 30px 70px 70px 70px;
 }
-.list-group{
+.list-group {
+  display: flex;
   margin-right: 100px;
   margin-left: 100px;
 }
